src/Editor/index.css
.editor {
  flex: 1 0 100px;
  margin: 5px;
  display: flex;
  flex-direction: column;
}

.react-codemirror2 {
  flex-grow: 1;
}

.CodeMirror {
  min-height: 100%;
}

.editor.collapse {
  flex-grow: 0;
}

.editor .header {
  padding: 2px;
  background-color: black;
  color: white;
  border-radius: 5px 5px 0 0;
  display: flex;
  align-items: baseline;
}

.editor .header button {
  margin-left: auto;
}

